--- a/homepage/help.html
+++ b/homepage/help.html
@@ -27,7 +27,7 @@
         <div class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://scontent-lga3-2.xx.fbcdn.net/v/t1.18169-9/10464383_811592512206628_1453319924255219169_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=gRV9Pt44V3MAX_Bp4tC&_nc_ht=scontent-lga3-2.xx&oh=00_AfApq66cfTds_t6F-WKX7-SHOcnW6jds58Q_8Yf2FcH9Jw&oe=6414E582" class="col-md-6 float-md-end mb-3 ms-md-3" width="100" height="400">
+                    <img src="https://images.media-outreach.com/Thumb/318x213/251821/Planetwater-logo.jpg" class="col-md-6 float-md-end mb-3 ms-md-3" width="100" height="400">
                 </div>
                 <div class="carousel-item">
                     <img src="https://www.globalwaters.org/sites/default/files/styles/assetthumb/public/iwa_logo.png?itok=8G6eJgKM" class="col-md-6 float-md-end mb-3 ms-md-3" width="100" height="400">
